# Prog2_NHF

./: .gitignore  CMakeLists.txt  Doxyfile  TODO  build.sh  docs.sh  main.cpp  run_game.sh  run_test.sh  test_main.cpp
AssetManager/: AssetManager.cpp  AssetManager.h
Bullets/: Bullet.cpp  Bullet.h  CircleBullet.cpp  CircleBullet.h
Collectables/: Coin.cpp  Coin.h  Collectable.h
Collisions/: Collisions.cpp  Collisions.h
Color/: Color.cpp  Color.h
Enemies/: Enemy.h  LargeEnemy.cpp  LargeEnemy.h  SmallEnemy.cpp  SmallEnemy.h
GameObjects/: GameObject.cpp  GameObject.h  Player.cpp  Player.h
ParticleSystem/: ParticleSystem.cpp  ParticleSystem.h
Utils/: Vec2.cpp  Vec2.h
World/: World.cpp  World.h
assets/shaders/: bloom.fs  default.fs
src/: main.cpp
src/AssetManager/: AssetManager.cpp  AssetManager.h
src/Bullets/: Bullet.cpp  Bullet.h  CircleBullet.cpp  CircleBullet.h
src/Collectables/: Coin.cpp  Coin.h  Collectable.h
src/Collisions/: Collisions.cpp  Collisions.h
src/Color/: Color.cpp  Color.h
src/Enemies/: Enemy.h  LargeEnemy.h  SmallEnemy.h
src/GameObjects/: GameObject.h  Player.cpp  Player.h
src/ParticleSystem/: ParticleSystem.cpp  ParticleSystem.h
src/Utils/: Vec2.cpp  Vec2.h
src/World/: World.cpp  World.h
test/: test_main.cpp
